<resources>
    <string name="app_name">speedCalculator</string>
    <string name="welcome">Speed Calculator</string>
    <string name="i_am_your_favorite_speed_calculator">I am your favorite speed calculator</string>
    <string name="tell_me_how_far_you_wanna_go_and_how_fast_n_i_will_tell_you_when_you_get_there">Tell me how far you want to go and your time and I will tell you your SPEED!</string>
    <string name="Distance_in_meters">Distance: in meters</string>
    <string name="_40">40</string>
    <string name="Time_in_hours">Time: in hours</string>
    <string name="_10">10</string>
    <string name="calculate_time">Calculate time</string>
    <string name="your_speed_will_appear_here">Your speed will appear here!</string>
</resources>