<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_margin="25dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/favCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_your_favorite_speed_calculator"
        android:ems="10"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_me_how_far_you_wanna_go_and_how_fast_n_i_will_tell_you_when_you_get_there"
        android:layout_margin="9dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favCalc" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Distance_in_meters"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prompt" />

    <EditText
        android:id="@+id/distanceInput"
        android:layout_height="48dp"
        android:layout_width="250dp"
        android:inputType="text"
        android:hint="@string/_40"
        app:layout_constraintTop_toBottomOf="@id/distance"
        app:layout_constraintStart_toStartOf="@id/distance">
    </EditText>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Time_in_hours"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distanceInput" />

    <EditText
        android:id="@+id/timeInput"
        android:layout_height="48dp"
        android:layout_width="250dp"
        android:inputType="text"
        android:hint="@string/_10"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="@id/distance"
        >
    </EditText>

    <Button
        android:id="@+id/supabutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/calculate_time"
        android:textColor="#7C4DFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeInput" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/your_speed_will_appear_here"
        android:typeface="sans"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/supabutton" />



</androidx.constraintlayout.widget.ConstraintLayout>